[package]
name = "bela"
version = "0.1.0"
authors = ["Andrew C. Smith <andrewchristophersmith@gmail.com>"]

[dependencies]
libc = "0.2"
nix = "0.21"

[dev-dependencies]
sample = { package = "dasp", version = "0.11.0", features = [ "signal", "slice" ] }

[dependencies.bela-sys]
git = "https://github.com/andrewcsmith/bela-sys.git"

[features]
static = [ "bela-sys/static" ]
