[package]
name = "bela"
version = "0.1.0"
authors = [
	"Andrew C. Smith <andrewchristophersmith@gmail.com>",
	"Johannes S. Mueller-Roemer <j.s.mueller-roemer@gmx.net>",
	"Paul Adenot <paul@paul.cx>",
]
license = "MIT OR Apache-2.0"

[dependencies]

[dev-dependencies]
sample = { package = "dasp", version = "0.11.0", features = [ "signal", "slice" ] }

[dependencies.bela-sys]
git = "https://github.com/andrewcsmith/bela-sys.git"

[features]
static = [ "bela-sys/static" ]
